--- a/src/MATH/SConstruct
+++ b/src/MATH/SConstruct
@@ -30,11 +30,22 @@ env.Library('libfeffmath', lib_src) # + FindOtherObjects(deps, env))
 ## needed for libonepath and libfeffpath shared objects
 if os.name != 'nt':
     env.SharedObject('bcoef' +env['SHOBJSUFFIX'], source='bcoef.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('besjh' +env['SHOBJSUFFIX'], source='besjh.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('besjn' +env['SHOBJSUFFIX'], source='besjn.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('bjnser'+env['SHOBJSUFFIX'], source='bjnser.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('csomm2'+env['SHOBJSUFFIX'], source='csomm2.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('cwig3j'+env['SHOBJSUFFIX'], source='cwig3j.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('determ'+env['SHOBJSUFFIX'], source='determ.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('dist'  +env['SHOBJSUFFIX'], source='dist.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('exjlnl'+env['SHOBJSUFFIX'], source='exjlnl.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('lu'    +env['SHOBJSUFFIX'], source='lu.f',     FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('phamp' +env['SHOBJSUFFIX'], source='phamp.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('polint'+env['SHOBJSUFFIX'], source='polint.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('rotwig'+env['SHOBJSUFFIX'], source='rotwig.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('somm'  +env['SHOBJSUFFIX'], source='somm.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('somm2' +env['SHOBJSUFFIX'], source='somm2.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('terp'  +env['SHOBJSUFFIX'], source='terp.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('terpc' +env['SHOBJSUFFIX'], source='terpc.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('trap'  +env['SHOBJSUFFIX'], source='trap.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
 
 #env.Install(ienv['i_lib'], 'libfeffmath' + env['SHLIBSUFFIX'])
