--- a/src/MATH/SConstruct
+++ b/src/MATH/SConstruct
@@ -33,8 +33,10 @@ if os.name != 'nt':
     env.SharedObject('besjh' +env['SHOBJSUFFIX'], source='besjh.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('besjn' +env['SHOBJSUFFIX'], source='besjn.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('bjnser'+env['SHOBJSUFFIX'], source='bjnser.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('csomm' +env['SHOBJSUFFIX'], source='csomm.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('csomm2'+env['SHOBJSUFFIX'], source='csomm2.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('cwig3j'+env['SHOBJSUFFIX'], source='cwig3j.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+    env.SharedObject('czeros'+env['SHOBJSUFFIX'], source='czeros.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('determ'+env['SHOBJSUFFIX'], source='determ.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('dist'  +env['SHOBJSUFFIX'], source='dist.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
     env.SharedObject('exjlnl'+env['SHOBJSUFFIX'], source='exjlnl.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
