update todo list, update testing

--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -88,6 +88,7 @@ python_wrapper_path = realpath(join('..', '..', 'wrappers', 'python'))
 ## the C wrapper example needs the header file
 if 'SUDO_UID' in os.environ.keys():
     env.InstallOwner(join(perl_wrapper_path, 'src'), 'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+    env.InstallOwner(join(python_wrapper_path),      'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
     env.Install(ienv['i_inc'], 'feffpath.h')
 else:
     env.Install([join(perl_wrapper_path, 'src'), python_wrapper_path, ienv['i_inc']], 'feffpath.h')
