--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -104,7 +104,8 @@ else:
 ## problem seems to be the call to Environment(), whihc overwrites the
 ## PATH stuff from FeffBuild, perhaps move BUILDERS line to FeffBuild...?
 
-if find_executable("swig"):
+#if find_executable("swig"):
+if False:
 
     here=os.getcwd()
 
@@ -143,8 +144,9 @@ if find_executable("swig"):
         env.Install(python_wrapper_path, join(here, 'python', 'feffpathwrapper.py'))
 
 else:
-    print "\nSWIG not installed, skipping perl&python wrappers for libfeffpath in GENFMT\n"
+    pass
+    #print "\nSWIG not installed, skipping perl&python wrappers for libfeffpath in GENFMT\n"
 
-env.Alias('install', [join(perl_wrapper_path, 'src'), join(perl_wrapper_path, 'lib', 'Xray/'),
-                      python_wrapper_path,
-                      ienv['i_lib'], ienv['i_bin'], ienv['i_inc'] ])
+# env.Alias('install', [join(perl_wrapper_path, 'src'), join(perl_wrapper_path, 'lib', 'Xray/'),
+#                       python_wrapper_path,
+#                       ienv['i_lib'], ienv['i_bin'], ienv['i_inc'] ])
