--- a/wrappers/python/SConstruct
+++ b/wrappers/python/SConstruct
@@ -37,9 +37,9 @@ plugin_dir = join(installdir,'plugins','xafs')
 module_dir = join(installdir,'modules')
 dll_dir    = join(installdir,'dlls',dlldir)
 
-env.Install( plugin_dir, "scatteringpath.py",)
-env.Install( module_dir, "feffpathwrapper.py",)
-env.Install( dll_dir,    "_feffpathwrapper.so",)
+# env.Install( plugin_dir, "scatteringpath.py",)
+# env.Install( module_dir, "feffpathwrapper.py",)
+# env.Install( dll_dir,    "_feffpathwrapper.so",)
 
-env.Alias('install', [plugin_dir, module_dir, dll_dir] )
+# env.Alias('install', [plugin_dir, module_dir, dll_dir] )
 
