--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -38,6 +38,7 @@ libs = ['libfeffgenfmt.a',
         join('..', 'JSON',   'libfeffjson.a'),
     ]
 
+
 env.Program('genfmt', ['regenf.f']+bin_src+libs)
 env.Install(ienv['i_bin'], 'genfmt'+env['PROGSUFFIX'])
 
@@ -86,12 +87,15 @@ perl_wrapper_path = realpath(join('..', '..', 'wrappers', 'perl'))
 python_wrapper_path = realpath(join('..', '..', 'wrappers', 'python'))
 ## ------------------------------------------------------------------------------------------------------
 ## the C wrapper example needs the header file
-if 'SUDO_UID' in os.environ.keys():
-    env.InstallOwner(join(perl_wrapper_path, 'src'), 'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
-    env.InstallOwner(join(python_wrapper_path),      'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
-    env.Install(ienv['i_inc'], 'feffpath.h')
-else:
-    env.Install([join(perl_wrapper_path, 'src'), python_wrapper_path, ienv['i_inc']], 'feffpath.h')
+# if 'SUDO_UID' in os.environ.keys():
+#     env.InstallOwner(join(perl_wrapper_path, 'src'), 'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+#     env.InstallOwner(join(python_wrapper_path),      'feffpath.h', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+#     env.Install(ienv['i_inc'], 'feffpath.h')
+# else:
+#     env.Install([join(perl_wrapper_path, 'src'), python_wrapper_path, ienv['i_inc']], 'feffpath.h')
+    
+env.Install(ienv['i_inc'], 'feffpath.h')
+
 
 
 
@@ -147,6 +151,11 @@ else:
     pass
     #print "\nSWIG not installed, skipping perl&python wrappers for libfeffpath in GENFMT\n"
 
-# env.Alias('install', [join(perl_wrapper_path, 'src'), join(perl_wrapper_path, 'lib', 'Xray/'),
-#                       python_wrapper_path,
-#                       ienv['i_lib'], ienv['i_bin'], ienv['i_inc'] ])
+# env.Alias('install', [
+#     #join(perl_wrapper_path, 'src'), join(perl_wrapper_path, 'lib', 'Xray/'),
+#     #python_wrapper_path,
+#     ienv['i_lib'], ienv['i_bin'], ienv['i_inc']
+# ])
+
+env.Alias('install', [ ienv['i_lib'], ienv['i_bin'], ienv['i_inc'] ])
+
