lots of error checking in potph C wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ src/GENFMT/feffpath
 wrappers/C/makepath
 wrappers/C/errors
 wrappers/C/makephases
+wrappers/C/pherr
 wrappers/fortran/makepath
 wrappers/fortran/makepotph
 src/PATH/pathfinder
