--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -46,6 +46,7 @@ env.Install(ienv['i_bin'], 'genfmt'+env['PROGSUFFIX'])
 ## build the onepath fortran librtary
 other_obj = [join('..','FF2X', 'fdtarr'      + env['SHOBJSUFFIX']), # called directly
              join('..','FF2X', 'fdthea'      + env['SHOBJSUFFIX']),
+             join('..','FF2X', 'fdtxdi'      + env['SHOBJSUFFIX']),
              join('..','RDINP','mkptz'       + env['SHOBJSUFFIX'])]
 misc_feff = [join('..','COMMON','wlog'       + env['SHOBJSUFFIX']), # called indeirectly
              join('..','COMMON','chopen'     + env['SHOBJSUFFIX']),
